--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container px-0">
           <div class="row col-gap-1 row-gap-3">
             <!-- Sản phẩm 1 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -115,7 +115,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 2 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -125,7 +125,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 3 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -135,7 +135,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 4 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -156,7 +156,7 @@
         <div class="container px-0">
           <div class="row col-gap-1 row-gap-3 ">
             <!-- Sản phẩm 1 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -166,7 +166,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 2 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -176,7 +176,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 3 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -186,7 +186,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 4 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -207,7 +207,7 @@
         <div class="container px-0">
           <div class="row col-gap-1 row-gap-3">
             <!-- Sản phẩm 1 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -217,7 +217,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 2 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -227,7 +227,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 3 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -237,7 +237,7 @@
                 </a>
             </div>
             <!-- Sản phẩm 4 -->
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-6">
                 <a class="card bg-primary" href="#">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBGKydTD3EBXRGUO0a-0t4TRmRdLZkdo7R7T88qep0XQ&s" alt="...">
                   <div class="card-body">
@@ -259,21 +259,21 @@
       <div class="container py-4 px-0">
         <ul class="px-0 row row-gap-5">
           <!-- Tên công ty và địa chỉ -->
-          <li class=" col-lg-3 col-sm-6 d-flex flex-column gap-1">
+          <li class=" col-lg-3 col-6 d-flex flex-column gap-1">
             <h3 class="ff-RacingSansOne fs-3 text-white m-0" href="#">Clothes<br/>Store</h3>
             <div class="logoAddress-content d-flex flex-column gap-3">
               <p class="fw-semibold text-white m-0">Công ty TNHH Clothes Store</p>
               <p class="fs-14px text-white m-0" style="max-width: 270px;">Địa chỉ: Tầng 7 toà A, Trường Đại học Thăng Long, Nghiêm Xuân Yêm - Đại Kim - Hoàng Mai - Hà Nội</p>
             </div>
           </li>
-          <li class="col-lg-3 col-sm-6 d-flex flex-column gap-1">
+          <li class="col-lg-3 col-6 d-flex flex-column gap-1">
             <p class="fw-semibold text-white">CÔNG TY</p>
             <a href="#" class="text-decoration-none text-white fs-14px">Giới thiệu về Clothes Store</a>
             <a href="#" class="text-decoration-none text-white fs-14px">Tuyển dụng</a>
             <a href="#" class="text-decoration-none text-white fs-14px">Hợp tác nhượng quyền</a>
             <a href="#" class="text-decoration-none text-white fs-14px">Liên hệ</a>
           </li>
-          <li class="col-lg-3 col-sm-6 d-flex flex-column gap-1">
+          <li class="col-lg-3 col-6 d-flex flex-column gap-1">
             <p class="fw-semibold text-white">CHÍNH SÁCH KHÁCH HÀNG</p>
             <a href="#" class="text-decoration-none text-white fs-14px">Chính sách đổi trả</a>
             <a href="#" class="text-decoration-none text-white fs-14px">Chính sách bảo hành</a>
