--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <a href="#" class="text-decoration-none text-white fs-14px">Các câu hỏi thường gặp</a>
             <a href="#" class="text-decoration-none text-white fs-14px">Hướng dẫn mua hàng online</a>
           </li>
-          <li class="col-lg-3 col-sm-6 d-flex flex-column gap-1">
+          <li class="col-lg-3 col-6 d-flex flex-column gap-1">
             <p class="fw-semibold text-white">LIÊN HỆ VỚI CHÚNG TÔI</p>
             <div class="d-flex gap-3">
               <a href="#"><i class="bi bi-facebook" style="font-size: 32px; color: #fff"></i></a>
