--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
           </div>
         </div>
         <div class="btn-more d-flex justify-content-center">
-          <button class="more border border-1 border-primary rounded bg-white fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
+          <button class="more border border-1 border-primary rounded bg-white text-primary
+           fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
         </div>
       </div>
       <!-- Thời trang nữ -->
@@ -198,7 +199,7 @@
           </div>
         </div>
         <div class="btn-more d-flex justify-content-center">
-          <button class="more border border-1 border-primary rounded bg-white fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
+          <button class="more border border-1 border-primary text-primary rounded bg-white fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
         </div>
       </div>
       <!-- Thời trang trẻ em -->
@@ -249,7 +250,7 @@
           </div>
         </div>
         <div class="btn-more d-flex justify-content-center">
-          <button class="more border border-1 border-primary rounded bg-white fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
+          <button class="more border border-1 border-primary text-primary rounded bg-white fw-semibold" style="width: 174px; height: 32px;">XEM THÊM</button>
         </div>
       </div>
     </div>
